test/expected/explain_en-knr.out
explain enum E x
        ^
9: error: "enum": unsupported type until C89
